[package]
name = "owoof"
version = "0.2.0-pre.0"
authors = ["sqwishy <somebody@froghat.ca>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sqwishy/owoof"
homepage = "https://github.com/sqwishy/owoof"
description = "Uses SQLite to store data and a datalog-like format to query it. "
keywords = ["datalog", "sqlite"]

# [[bin]]
# name = "cli"
# required-features = ["cli"]

[features]
default = ["explain"]
explain = []
# cli = ["serde_json"]

[dependencies]
anyhow = "1"
thiserror = "1"
rusqlite = { version = "0.26", features = ["uuid", "functions", "hooks"] }
uuid = { version = "0.8", features = ["v4"] }
# uuid = { version = "0.8", features = ["serde", "v4"] }
# chrono = { version = "0.4", features = ["serde"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1"
# serde_json = "1"
