[package]
name = "owoof"
version = "0.2.0-pre.0"
authors = ["sqwishy <somebody@froghat.ca>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sqwishy/owoof"
homepage = "https://github.com/sqwishy/owoof"
description = "Uses SQLite to store data and a datalog-like format to query it. "
keywords = ["datalog", "sqlite"]

[[bin]]
name = "owoof"
required-features = ["cli"]

[[bin]]
name = "owoof-csv"
required-features = ["cli", "csv", "atty"]

[features]
default = ["explain"]
explain = []
cli = ["serde", "serde_json", "anyhow", "either", "uuid/serde"]

[dependencies]
thiserror = "1"
rusqlite  = { version = "0.26", features = ["uuid", "functions", "hooks"] }
uuid      = { version = "0.8", features = ["v4"] }

# chrono = { version = "0.4", features = ["serde"] }

anyhow     = { version = "1", optional = true }
serde      = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
either     = { version = "1", optional = true }
csv        = { version = "1", optional = true }
atty       = { version = "0.2", optional = true }

[dev-dependencies]
anyhow = "1"
